<resources>
    <!--MainRegistrationActivity strings-->
    <string name="app_name">Kyle</string>
    <string name="logo_kyle">logo_kyle</string>
    <string name="login">Вход</string>
    <string name="register">Регистрация</string>
    <string name="continue_without">Продолжить без</string>
    <string name="without_acc">аккаунта</string>
    <!--BottomNavigation strings-->
    <string name="home">Home</string>
    <string name="create">Create</string>
    <string name="settings">Settings</string>
    <!--FragmentCreate strings-->
    <string name="create_acc">Создание аккаунта</string>
    <string name="choose_section">Выберите раздел</string>
    <string name="description_arrow_btn">arrow_btn</string>
    <string name="info">Информация</string>
    <string name="settings_tab">Настройки</string>
    <!--FragmentInformation strings-->
    <string name="record_title">Название записи</string>
    <string name="enter_name_of_record">Введите название записи</string>
    <string name="enter_email_of_record">Введите почту аккаунта</string>
    <string name="enter_password_of_record">Введите почту аккаунта</string>
    <string name="email">Адрес почты</string>
    <string name="password">Пароль</string>
    <string name="crate_btn">Создать</string>
    <string name="record_type">Тип записи</string>
    <string name="app">Приложение</string>
    <!--MainActivity strings-->
    <string name="settings_button">Settings button</string>
    <string name="folders">Папки</string>
    <string name="find_button">Find button</string>
    <string name="credit_cards">Кредитные карточки</string>
    <!--folder_card.xml strings-->
    <string name="folder_image">Folder background image</string>
    <string name="folder_name">Название папки</string>
    <!--credit_card.xml strings-->
    <string name="credit_name">Название карты</string>
    <string name="credit_logo_name">Лого</string>
    <!--account_card.xml strings-->
    <string name="account_name">Название</string>
    <string name="account_login">Логин</string>
    <string name="account_logo">Лого аккаунта</string>
    <!--activity_registration.xml strings -->
    <string name="welcome">Добро пожаловать</string>
    <string name="add_btn">Create button</string>
    <string name="login_name">Логин</string>
    <string name="email_name">Email</string>
    <string name="password_text">Пароль</string>
    <string name="repeat_password_text">Повторите пароль</string>
    <string name="create_text">Создать</string>
    <string name="register_btn">Register</string>
    <string name="google_btn">Google button</string>
    <string name="twitter_btn">Twitter button</string>
    <string name="facebook_btn">Facebook button</string>
    <string name="log_into_an_existing_account"><u>Войти в существующий аккаунт</u></string>
    <!--activity_login.xml strings -->
    <string name="happy_to_see_you">Рады вас видеть</string>
    <string name="login_text">Войти</string>
    <string name="register_text"><u>Зарегистрироваться</u></string>
    <string name="forgot_password"><u>Забыли пароль?</u></string>
    <string name="arrow_icon">Arrow back button</string>
    <!--Snackbar strings -->
    <string name="error_empty_fields">Заполните все поля!</string>
    <string name="error_passwords_dont_equal">Пароли не совпадают!</string>
    <string name="error_login_length">Логин должен содержать от 5 до 12 символов!</string>
    <string name="error_password_length">Пароль должен содержать от 8 до 18 символов!</string>
    <string name="error_email_length">Адрес почты должен содержать от 3 до 254 символов!</string>
    <string name="email_error_contains_not_valid_symbols">Введите действительную почту!
    </string>
    <string name="error_contains_not_valid_symbols">Логин содержит не поддерживаемые символы!
    </string>
    <string name="some_problem_occurred">Возникла непредвиденная ошибка!</string>
    <string name="unexpected_error_try_later">Непредвиденная ошибка, попробуйте позже</string>
    <string name="not_valid_password">Пароль должен содержать как минимум одини символ
        верхнего регистра!
    </string>
    <string name="document_with_inserted_data_already_exist">Документ с введёнными данными
    уже существует!</string>
    <string name="name_error_not_valid">Название записи должно содержать до 30 симоволов!</string>
    <string name="user_with_this_email_already_exist">Пользователь с такой почтой уже существует!
    </string>
    <string name="user_with_this_login_already_exist">Пользователь с таким логином уже существует!
    </string>
    <string name="incorrect_email_or_password_entered">Введена не правильная почта или пароль
    </string>
    <string name="logging_in_to_your_account">Входим в аккаунт</string>
    <string name="record_successfully_updated">Запись успешно обновлена!</string>
    <!--Dialog strings -->
    <string name="creating_user">Создаём пользователя</string>
    <!--Type spinner strings -->
    <string-array name="type_spinner">
        <item>Электронная почта</item>
        <item>Социальные сети</item>
        <item>Путешествия</item>
        <item>Творчество</item>
        <item>Работа</item>
        <item>Развлечения</item>
        <item>Обучение</item>
    </string-array>
    <!--Toolbar strings-->
    <string name="accounts">Аккаунты</string>
    <string name="profile">Профиль</string>
    <string name="create_record">Создание записи</string>
    <!--ProfileFragment strings-->
    <string name="default_email">Почта по умолчанию</string>
    <string name="insert_default_email">Введите почту по умолчанию</string>
    <!--DialogFragment strings-->
    <string name="cancel">Отмена</string>
    <string name="save">Сохранить</string>
    <!--fragment_passwords.xml strings-->
    <string name="most_popular">Наиболее популярные</string>
    <string name="categories">Категории</string>
    <string name="hello_world">Hello world!</string>
    <!--activity_account.xml strings-->
    <string name="account_icon">account_icon</string>
    <string name="example_account_name">Example account name</string>
    <string name="example_account_email">ExampleEmail@gmail.com</string>
    <string name="example_name">Example name</string>
    <string name="name">Name</string>
    <string name="password_hint">Password</string>
</resources>