<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login_activity"
    android:background="@drawable/login_background">

    <ImageButton
        android:layout_width="20dp"
        android:layout_height="25dp"
        android:onClick="onArrowButtonClicked"
        android:background="@null"
        android:contentDescription="@string/arrow_icon"
        android:scaleType="centerCrop"
        android:src="@drawable/white_arrow_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043" />

    <TextView
        android:id="@+id/title_welcome"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sfudisplay_black"
        android:text="@string/happy_to_see_you"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.378"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.164" />

    <EditText
        android:id="@+id/email_entry"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/entry_grey"
        android:ems="15"
        android:hint="@string/email_name"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="@color/entry_grey"
        android:textColorHint="@color/entry_grey"
        android:theme="@style/EditTextRegistration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_welcome"
        app:layout_constraintVertical_bias="0.194" />

    <EditText
        android:id="@+id/password_entry"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:ems="15"
        android:hint="@string/password_text"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/entry_grey"
        android:textColorHint="@color/entry_grey"
        android:theme="@style/EditTextLogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_entry"
        app:layout_constraintVertical_bias="0.038" />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sfuidisplay_bold"
        android:text="@string/login_text"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/password_entry"
        app:layout_constraintTop_toBottomOf="@+id/password_entry"
        app:layout_constraintVertical_bias="0.129" />

    <ImageButton
        android:onClick="onLoginBtnClicked"
        android:id="@+id/login_button"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@null"
        android:contentDescription="@string/register_btn"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password_entry"
        app:layout_constraintHorizontal_bias="0.903"
        app:layout_constraintStart_toEndOf="@+id/login_text"
        app:layout_constraintTop_toBottomOf="@+id/password_entry"
        app:layout_constraintVertical_bias="0.101"
        app:srcCompat="@drawable/go_btn" />

    <ImageButton
        android:id="@+id/google_btn"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@null"
        android:contentDescription="@string/google_btn"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/login_text"
        app:layout_constraintTop_toBottomOf="@+id/login_text"
        app:layout_constraintVertical_bias="0.273"
        app:srcCompat="@drawable/google_btn" />

    <ImageButton
        android:id="@+id/twitter_btn"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@null"
        android:contentDescription="@string/twitter_btn"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/facebook_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/google_btn"
        app:layout_constraintTop_toBottomOf="@+id/login_text"
        app:layout_constraintVertical_bias="0.273"
        app:srcCompat="@drawable/twitter_btn" />

    <ImageButton
        android:id="@+id/facebook_btn"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@null"
        android:contentDescription="@string/facebook_btn"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/login_button"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        app:layout_constraintVertical_bias="0.192"
        app:srcCompat="@drawable/facebook_btn" />

    <TextView
        android:onClick="onRegisterTextClicked"
        android:id="@+id/register_acc_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/register_text"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twitter_btn"
        app:layout_constraintVertical_bias="0.676" />

    <TextView
        android:id="@+id/login_with_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.728"
        app:layout_constraintStart_toEndOf="@+id/register_acc_text"
        app:layout_constraintTop_toBottomOf="@+id/twitter_btn"
        app:layout_constraintVertical_bias="0.671" />

</androidx.constraintlayout.widget.ConstraintLayout>