<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InformationFragment">

    <TextView
        android:id="@+id/record_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/record_title"
        android:textColor="@color/light_grey"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.030" />

    <EditText
        android:id="@+id/record_name_entry"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@drawable/entry_background"
        android:ems="19"
        android:hint="@string/enter_name_of_record"
        android:fontFamily="sans-serif"
        android:padding="8dp"
        android:textColor="@color/dark_grey"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColorHint="@color/dark_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/record_name_text"
        app:layout_constraintTop_toBottomOf="@+id/record_name_text"
        app:layout_constraintVertical_bias="0.017"
        android:autofillHints="name of record"
        android:inputType="text"/>

    <TextView
        android:id="@+id/email_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/light_grey"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/record_name_entry"
        app:layout_constraintTop_toBottomOf="@+id/record_name_entry"
        app:layout_constraintVertical_bias="0.02" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@drawable/entry_background"
        android:ems="19"
        android:hint="@string/enter_email_of_record"
        android:padding="8dp"
        android:textColor="@color/dark_grey"
        android:textColorHint="@color/dark_grey"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/email_entry"
        app:layout_constraintTop_toBottomOf="@+id/email_entry"
        app:layout_constraintVertical_bias="0.017" />

    <TextView
        android:id="@+id/password_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/light_grey"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_bias="0.02" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:ems="19"
        android:background="@drawable/entry_background"
        android:inputType="textPassword"
        android:hint="@string/enter_password_of_record"
        android:padding="8dp"
        android:textColor="@color/dark_grey"
        android:textColorHint="@color/dark_grey"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/password_entry"
        app:layout_constraintTop_toBottomOf="@+id/password_entry"
        app:layout_constraintVertical_bias="0.017" />

    <Button
        android:id="@+id/button"
        android:layout_width="285dp"
        android:layout_height="50dp"
        android:background="@drawable/create_btn_background"
        android:fontFamily="sans-serif-black"
        android:text="@string/crate_btn"
        android:textAllCaps="false"
        android:textColor="@color/full_white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.849" />


</androidx.constraintlayout.widget.ConstraintLayout>